# ved

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: ved.cpp
test.d/: CMakeLists.txt  t-ved.cpp
